--- a/src/pages/login/scss/Login.scss
+++ b/src/pages/login/scss/Login.scss
@@ -52,10 +52,6 @@ $highlight-blue-bg: #dbeafe;
   background-color: $primary-color;
 }
 
-body {
-  background-color: #ffff;
-}
-
 img {
   max-width: 100%;
   width: 100%;
@@ -234,95 +230,16 @@ li {
 }
 
 body {
+  height: 100vh;
   .container {
     // max-width: 1280px;
     // width: 100%;
     // margin: auto;
 
-    .loader-wrapper {
-      width: 200px;
-      height: 60px;
-      position: relative;
-      z-index: 1;
-      .circle {
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        border-radius: 50%;
-        background-color: #49a843;
-        left: 15%;
-        transform-origin: 50%;
-        animation: circle7124 0.5s alternate infinite ease;
-        @keyframes circle7124 {
-          0% {
-            top: 60px;
-            height: 5px;
-            border-radius: 50px 50px 25px 25px;
-            transform: scaleX(1.7);
-          }
-
-          40% {
-            height: 20px;
-            border-radius: 50%;
-            transform: scaleX(1);
-          }
-
-          100% {
-            top: 0%;
-          }
-        }
-      }
-      .circle:nth-child(2) {
-        left: 45%;
-        animation-delay: 0.2s;
-      }
-      .circle:nth-child(3) {
-        left: auto;
-        right: 15%;
-        animation-delay: 0.3s;
-      }
-
-      .shadow {
-        width: 20px;
-        height: 4px;
-        border-radius: 50%;
-        background-color: #969d88;
-        position: absolute;
-        top: 62px;
-        transform-origin: 50%;
-        z-index: -1;
-        left: 15%;
-        filter: blur(1px);
-        animation: shadow046 0.5s alternate infinite ease;
-        @keyframes shadow046 {
-          0% {
-            transform: scaleX(1.5);
-          }
-
-          40% {
-            transform: scaleX(1);
-            opacity: 0.7;
-          }
-
-          100% {
-            transform: scaleX(0.2);
-            opacity: 0.4;
-          }
-        }
-      }
-      .shadow:nth-child(4) {
-        left: 45%;
-        animation-delay: 0.2s;
-      }
-      .shadow:nth-child(5) {
-        left: auto;
-        right: 15%;
-        animation-delay: 0.3s;
-      }
-    }
     .login-page-container {
       width: 100%;
       background-image: url(/icons/login-frame.svg);
+      height: 100vh;
 
       .logo-container {
         padding: 24px 0px 0px 16px;
@@ -333,6 +250,7 @@ body {
         }
       }
       .login-container {
+        height: calc(100vh - 80px);
         align-items: center;
         justify-content: center;
         gap: 115px;
@@ -354,18 +272,12 @@ body {
           form {
             .form-heading {
               h1 {
-                font-size: 24px;
-                line-height: 30px;
-                font-weight: 500;
-                font-family: $font-Roboto;
+                font: 500 24px/28px $font-Roboto;
                 color: $font-primary-color;
                 padding-bottom: 6px;
               }
               p {
-                font-size: 16px;
-                line-height: 20px;
-                font-family: $font-Roboto;
-                font-family: 400;
+                font: 400 16px/20px $font-Roboto;
                 color: $font-primary-color;
                 padding-bottom: 24px;
               }
@@ -374,11 +286,8 @@ body {
               flex-direction: column;
               margin-bottom: 10px;
               label {
-                font-family: $font-Roboto;
-                font-size: 12px;
-                line-height: 16px;
+                font: 400 12px/16px $font-Roboto;
                 color: $font-secondary-color;
-                font-weight: 400;
                 padding-bottom: 6px;
               }
               .email-input {
@@ -387,15 +296,16 @@ body {
                 padding: 10px 0px 10px 12px;
                 border-radius: 4px;
               }
+              .email-input:focus {
+                border: 1px solid $primary-color;
+                outline: none;
+              }
             }
             .password-container {
               margin-bottom: 10px;
 
               label {
-                font-size: 12px;
-                line-height: 15px;
-                font-weight: 400;
-                font-family: $font-Roboto;
+                font: 400 12px/16px $font-Roboto;
                 color: $font-secondary-color;
               }
               .password-field {
@@ -407,6 +317,10 @@ body {
                   border: 1px solid $border-color;
                   color: $font-primary-color;
                   border-radius: 4px;
+                }
+                .password-input:focus {
+                  border: 1px solid $primary-color;
+                  outline: none;
                 }
                 .eye-icon {
                   cursor: pointer;
@@ -436,19 +350,17 @@ body {
                 }
 
                 p {
-                  font-size: 12px;
-                  line-height: 16px;
-                  font-weight: 500;
+                  font: 500 12px/16px $font-Roboto;
                   color: $font-primary-color;
                 }
               }
               .forgot-container {
                 a {
                   color: $font-primary-color;
-                  font-family: $font-Roboto;
-                  font-size: 12px;
-                  line-height: 16px;
-                  font-weight: 400;
+                  font: 400 12px/16px $font-Roboto;
+                  &:hover {
+                    color: $btn-hover-color; 
+                  }
                 }
               }
             }
@@ -456,10 +368,10 @@ body {
               button {
                 width: 100%;
                 align-items: center;
-                span{
-                 .loader{
-                  margin-left: 8px;
-                 }
+                span {
+                  .loader {
+                    margin-left: 8px;
+                  }
                 }
               }
             }
